# infrastructure

./: .gitignore  .gitmodules  .sops.yaml  Justfile  Makefile  README.md  kics.config  mise.toml
.github/: CODEOWNERS  renovate.json
.github/actions/setup-compose-cmt/: action.yml
.github/workflows/: cd.yml  ci.yml  cmt.yml  compose-cmt-apply.yml  compose-cmt.yml  pr-ci.yml  pr.yml  terraform.yml
ansible/: .ansible-lint  .gitignore  ansible.cfg  home-servers.yml  home_servers.yml  hosts  hosts.yml  oci_servers.yml  requirements.yml  site.yml
ansible/group_vars/home_ep/: home-assistant.secrets.yml  home-assistant.secrets.yml.sops  homer.secrets.yml.sops
ansible/group_vars/oci_arm/: cf_tokens.secrets.yml.sops
ansible/hosts/: home_servers.yml  hosts.yml  oci_servers.yml
ansible/roles/fail2ban/: templates
compose/: README.md  config.yml  ssh_config
compose/hosts/arm-srv/: host.yml
compose/scripts/: is-ci.sh
data/cloudflare/: tunnels.secrets.yml  tunnels.secrets.yml.sops
data/my-services/: heimdall_config.yaml  homer_config.yml  services.yml
docs/: home-ep.md
internal/remote/: client.go
internal/syncer/: output_style.go
scripts/: Makefile  check-secrets.sh
scripts/my-services/: convert_to_heimdall.py  convert_to_homer.py  services.schema.json
terraform/: .terraform.lock.hcl  api.tf  cloudflare_access.tf  cloudflare_tunnel.tf  github_actions_wif.tf  kms.tf  locals.tf  provider.tf  terraform.secrets.tfvars.sops
tools/ansible/: README.md  pyproject.toml
tools/compose/: .golangci.yml  README.md  config.example.yml  go.mod  go.sum  main.go
(+118 files in other folders)
