[project]
name = "ansible-tools"
version = "0.1.0"
description = "Ansible and ansible-lint for CI and local use"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13",
    "ansible-lint>=26,<27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
